[package]
name = "tun-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.4.0"
futures = "0.3.28"
ipnet = "2.7.2"
log = "0.4.17"
pnet = "0.33.0"
tokio = { version = "1.28.1", features = ["full"] }
tokio-util = {version = "0.7.8", features = ["full"]}
tun = {version = "0.5.5", features = ["async"]}

